...
  useAnimatedStyle,
  useSharedValue,
  withSpring,
} from 'react-native-reanimated';
import {
  Apple,
  Milk,
  Beef,
  Croissant,
  Snowflake,
  Coffee,
  Cookie,
  Home,
...
